# SafarPay

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.migrate  README.md  Refactoring SafarPay Microservices Architecture.md  Tech Stack.txt  architecture_audit_report.md  auth-doc.md  bidding-doc.md  code.md  docker-compose.yml  location-doc.md  main.py  orm_infrastructure_audit_report.md  pyproject.toml  ride-doc.md  verification-doc.md
docs/: auth-doc.md  bidding-doc.md  kafka-websockets.md  location-doc.md  ride-doc.md  verification-doc.md
libs/platform/: pyproject.toml
libs/platform/src/sp/: __init__.py
libs/platform/src/sp/core/: __init__.py  config.py
libs/platform/src/sp/core/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
libs/platform/src/sp/infrastructure/: __init__.py
libs/platform/src/sp/infrastructure/cache/: __init__.py  manager.py
libs/platform/src/sp/infrastructure/db/: __init__.py  base.py  engine.py  repository.py  session.py
libs/platform/src/sp/infrastructure/messaging/: __init__.py  events.py  inbox.py  kafka.py  outbox.py  publisher.py  subscriber.py
libs/platform/src/sp/infrastructure/security/: __init__.py  dependencies.py  jwt.py  permissions.py
migrations/: alembic.ini  env.py
migrations/versions/: 0000_initial_schema.py  0001_location_history.py  0002_geospatial_zones.py  0003_communication_service.py  0004_bidding_lifecycle_contract.py  0005_outbox_inbox_contracts.py  0006_standardize_bidding_communication_outbox.py  0007_pr18_reliability_contract_fixes.py  1a2b3c4d5e6f_add_profile_img_to_users.py  __init__.py
scripts/: init-schemas.sql
services/auth/: pyproject.toml
services/auth/auth/: main.py
services/auth/auth/api/: __init__.py  router.py
services/auth/auth/application/: __init__.py  schemas.py  use_cases.py
services/auth/auth/domain/: __init__.py  exceptions.py  interfaces.py  models.py
services/auth/auth/infrastructure/: __init__.py  dependencies.py  orm_models.py  repositories.py
services/auth/auth/infrastructure/messaging/: whatsapp.py
services/auth/auth/infrastructure/security/: google_oauth.py  rate_limit.py
services/bidding/: pyproject.toml
services/bidding/bidding/: __init__.py  main.py
services/bidding/bidding/api/: __init__.py  router.py
services/bidding/bidding/application/: __init__.py  schemas.py  use_cases.py
services/bidding/bidding/domain/: __init__.py  exceptions.py  interfaces.py  models.py
services/bidding/bidding/infrastructure/: __init__.py  clients.py  dependencies.py  kafka_consumer.py  orm_models.py  outbox_worker.py  repositories.py  webhook_client.py  websocket_manager.py
services/communication/: pyproject.toml
services/communication/communication/: __init__.py  main.py
services/communication/communication/api/: __init__.py  router.py
services/communication/communication/application/: __init__.py  schemas.py  use_cases.py
services/communication/communication/domain/: __init__.py  exceptions.py  interfaces.py  models.py
services/communication/communication/infrastructure/: __init__.py  dependencies.py  kafka_consumer.py  orm_models.py  outbox_worker.py  repositories.py  storage.py  websocket_manager.py
services/gateway/: pyproject.toml
services/gateway/gateway/: main.py
services/gateway/gateway/api/: router.py
services/gateway/gateway/application/: use_cases.py
services/gateway/gateway/domain/: models.py
services/geospatial/: pyproject.toml
services/geospatial/geospatial/: __init__.py  main.py
services/geospatial/geospatial/api/: __init__.py  router.py
services/geospatial/geospatial/application/: __init__.py  schemas.py  use_cases.py
services/geospatial/geospatial/domain/: exceptions.py  interfaces.py  models.py
services/geospatial/geospatial/infrastructure/: __init__.py  dependencies.py  h3_index.py  kafka_consumer.py  location_client.py  mapbox_client.py  orm_models.py  repositories.py
services/location/: pyproject.toml
services/location/location/: __init__.py  main.py
services/notification/: pyproject.toml
services/notification/notification/: main.py
services/ride/: pyproject.toml
services/ride/ride/: __init__.py  main.py
services/ride/ride/api/: __init__.py  router.py
services/ride/ride/application/: __init__.py  schemas.py  use_cases.py
services/ride/ride/domain/: __init__.py  exceptions.py  interfaces.py  models.py
services/ride/ride/infrastructure/: __init__.py  dependencies.py  geospatial_client.py  kafka_consumer.py  notification_client.py  orm_models.py  outbox_publisher.py  repositories.py  storage.py  webhook_client.py  websocket_manager.py
services/verification/: pyproject.toml
services/verification/verification/: __init__.py  main.py
services/verification/verification/api/: __init__.py  router.py
services/verification/verification/application/: __init__.py  schemas.py  use_cases.py
services/verification/verification/application/services/: identity_verification_engine.py  rejection_resolver.py
services/verification/verification/domain/: __init__.py  exceptions.py  interfaces.py  models.py
services/verification/verification/infrastructure/: __init__.py  dependencies.py  orm_models.py  outbox_publisher.py  repositories.py  storage.py
tests/: test_actor_identity.py
tests/architecture/: test_enterprise_contracts.py
tests/auth/: test_auth_routes.py  test_auth_use_cases.py
tests/bidding/: conftest.py  test_bidding_lifecycle.py  test_bidding_routes.py  test_bidding_use_cases.py
tests/communication/: conftest.py  test_communication_routes_and_infra.py  test_communication_use_cases.py
tests/geospatial/: conftest.py  test_geospatial_routes_and_infra.py  test_geospatial_use_cases.py
tests/location/: conftest.py  test_location_domain_use_cases.py  test_location_routes_and_infra.py
tests/platform/: test_event_contracts.py  test_outbox_worker.py
tests/ride/: conftest.py  test_ride_routes.py  test_ride_use_cases.py
tests/verification/: conftest.py  test_verification_routes.py  test_verification_use_cases.py
(+27 files in other folders)
