[project]
name = "sp"
version = "0.1.0"
description = "SafarPay internal platform SDK — infrastructure, security, observability"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "starlette>=0.37.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "redis>=5.0.0",
    "kafka-python>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-json-logger>=2.0.0",
    "geoalchemy2>=0.14.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true
