[project]
name = "ride"
version = "0.1.0"
description = "SafarPay Ride Management Service"
requires-python = ">=3.10"
dependencies = [
    "sp",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "kafka-python>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
]

[tool.uv.sources]
sp = { workspace = true }

[tool.uv.build-backend]
module-root = "."

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
