[project]
name = "verification"
version = "0.1.0"
description = "SafarPay Verification Service — identity document management"
requires-python = ">=3.10,<3.12"
dependencies = [
    "sp",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "deepface==0.0.93",
    # TODO: paddleocr==2.7.0.3 has transitive dependencies that enforce python < 3.12. 
    # Revisit this when newer paddle/paddleocr wheels exist.
    "paddleocr==2.7.0.3",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26,<2.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.6.0",
]

[tool.uv.sources]
sp = { workspace = true }

[tool.uv.build-backend]
module-root = "."

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
